# derive-test.rs

./: Cargo.toml
crates/derive_test/: Cargo.toml
crates/derive_test/src/: lib.rs
