[package]
name = "derive_test"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[features]
default = ["std"]

std = []

# Third-party crate support (clap and thiserror require std)
serde = ["dep:serde"]

[dependencies]
# dtolnay/paste is no longer maintained so I've pinned the latest release.
paste = "=1.0.15"

# Optional feature-flagged dependencies.
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
